WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
225225
REGRESSION: [ iOS ] 11 http/wpt/webauthn/ tests are crashing
https://bugs.webkit.org/show_bug.cgi?id=225225
Summary
REGRESSION: [ iOS ] 11 http/wpt/webauthn/ tests are crashing
Jiewen Tan
Reported
2021-04-30 01:01:55 PDT
REGRESSION: [ iOS ] 11 http/wpt/webauthn/ tests are crashing.
Attachments
Patch
(3.36 KB, patch)
2021-04-30 01:25 PDT
,
Jiewen Tan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jiewen Tan
Comment 1
2021-04-30 01:02:41 PDT
rdar://77074618
Jiewen Tan
Comment 2
2021-04-30 01:25:00 PDT
Created
attachment 427400
[details]
Patch
youenn fablet
Comment 3
2021-05-03 02:37:44 PDT
Comment on
attachment 427400
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=427400&action=review
> Source/WebKit/UIProcess/WebAuthentication/AuthenticatorManager.cpp:489 > + runPresenterInternal(transports);
Instead of introducing another virtual method, can we use something like: if (isMock()) return;
Jiewen Tan
Comment 4
2021-05-04 11:08:58 PDT
Comment on
attachment 427400
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=427400&action=review
>> Source/WebKit/UIProcess/WebAuthentication/AuthenticatorManager.cpp:489 >> + runPresenterInternal(transports); > > Instead of introducing another virtual method, can we use something like: > if (isMock()) > return;
The design of the testing infrastructure here is to make the authenticator manager unaware of whether or not it's mocking. That's why we have all kinds of different virtual methods.
Brent Fulgham
Comment 5
2021-05-04 11:16:45 PDT
Comment on
attachment 427400
[details]
Patch r=me
Jiewen Tan
Comment 6
2021-05-04 11:25:05 PDT
Comment on
attachment 427400
[details]
Patch Thanks Brent for r+ this patch.
EWS
Comment 7
2021-05-04 11:35:05 PDT
Committed
r276972
(
237301@main
): <
https://commits.webkit.org/237301@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 427400
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug