REGRESSION: [ iOS ] 11 http/wpt/webauthn/ tests are crashing https://bugs.webkit.org/show_bug.cgi?id=225225 rdar://77074618

Reviewed by Brent Fulgham.

Covered by exisiting tests.

* UIProcess/WebAuthentication/AuthenticatorManager.cpp:
(WebKit::AuthenticatorManager::runPresenter):
(WebKit::AuthenticatorManager::runPresenterInternal):
* UIProcess/WebAuthentication/AuthenticatorManager.h:
* UIProcess/WebAuthentication/Mock/MockAuthenticatorManager.h:
Disables the modern UI in the mock testing environment.


Canonical link: https://commits.webkit.org/237301@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@276972 268f45cc-cd09-0410-ab3c-d52691b4dbfc